k8s/projects-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: projects-db
  name: projects-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: projects-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
        hostname: projects-db
      creationTimestamp: null
      labels:
        io.kompose.network/tiggomark-network: "true"
        io.kompose.service: projects-db
    spec:
      hostname: projects-db
      containers:
        - args:
            - --character-set-server=utf8
            - --collation-server=utf8_unicode_ci
          image: mysql:8.0
          name: projects-db
          ports:
            - containerPort: 3309
          resources:
            limits:
              cpu: 500m
              memory: "268435456"
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: projects-db-data
      restartPolicy: Always
      volumes:
        - name: projects-db-data
          persistentVolumeClaim:
            claimName: projects-db-data
status: {}
