k8s/saas-connector-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: saas-connector-db
  name: saas-connector-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: saas-connector-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
        hostname: saas-connector-db
      creationTimestamp: null
      labels:
        io.kompose.network/tiggomark-network: "true"
        io.kompose.service: saas-connector-db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: saasconnector
            - name: MYSQL_PASSWORD
              value: "123456789"
            - name: MYSQL_ROOT_PASSWORD
              value: "123456789"
            - name: MYSQL_USER
              value: admin
          image: mysql:8
          name: saas-connector-db
          ports:
            - containerPort: 3306
          resources:
            limits:
              cpu: 500m
              memory: "268435456"
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: saas-connector-db-data
      hostname: tiggomark-saas-connector-db
      restartPolicy: Always
      volumes:
        - name: saas-connector-db-data
          persistentVolumeClaim:
            claimName: saas-connector-db-data
status: {}
