k8s/projects-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: projects-db
  name: projects-db
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3309
  selector:
    io.kompose.service: projects-db
status:
  loadBalancer: {}
