k8s/saas-connector-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: saas-connector-db
  name: saas-connector-db
spec:
  ports:
    - name: "4500"
      port: 4500
      targetPort: 3306
  selector:
    io.kompose.service: saas-connector-db
status:
  loadBalancer: {}
