k8s/saas-connector-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: saas-connector-lb
  labels:
    app: saas-connector
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: saas-connector
