k8s/tiggomark_network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: tiggomark-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/tiggomark-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/tiggomark-network: "true"
